# file-search

./: .env.example  .gitignore  README.md  pyproject.toml  roadmap.md
src/fs_explorer/: __init__.py  document_index.py  fs.py  mcp_server.py
